@@ -21,9 +21,9 @@
 
     <dependencies>
       <dependency org="org.apache.zookeeper" name="zookeeper" rev="3.4.5" transitive="false"/>
-      <dependency org="org.apache.httpcomponents" name="httpcore" rev="4.1.4" transitive="false"/>
-      <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.1.3" transitive="false"/>
-      <dependency org="org.apache.httpcomponents" name="httpmime" rev="4.1.3" transitive="false"/>
+      <dependency org="org.apache.httpcomponents" name="httpcore" rev="4.2.3" transitive="false"/>
+      <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.2.3" transitive="false"/>
+      <dependency org="org.apache.httpcomponents" name="httpmime" rev="4.2.3" transitive="false"/>
       <dependency org="commons-io" name="commons-io" rev="${commons-io.version}" transitive="false"/>
       <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.4" transitive="false"/>
       <dependency org="org.codehaus.woodstox" name="wstx-asl" rev="3.2.7" transitive="false"/>
